# drone-framesync

./: Cargo.toml  README.md  rust-toolchain
benchmark/: Cargo.toml  Drone.toml  Justfile
benchmark/src/tasks/: root.rs
src/: bitstream.rs  framebuffer.rs  lib.rs  sliceext.rs  syncwindow.rs
src/comparators/: lzc.rs  mod.rs  popcnt.rs  twoscmpl.rs
src/detectors/: cortexm4.rs  double16.rs  double32.rs  mod.rs  single16.rs  single32.rs
