[package]
name = "drone-framesync"
version = "0.1.0"
authors = ["Rasmus Melchior Jacobsen <rmja@laesoe.org>"]
edition = "2018"
repository = "https://github.com/rmja/drone-framesync"
readme = "README.md"
license = "MIT OR Apache-2.0"
description = """
Fast Frame Synchronization algorithms.
"""

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
bitvec = "0.20"
ringbuf = "0.2"