[package]
name = "drone-framesync"
version = "0.1.0"
authors = ["Rasmus Melchior Jacobsen <rmja@laesoe.org>"]
edition = "2021"
repository = "https://github.com/rmja/drone-framesync"
readme = "README.md"
license = "MIT OR Apache-2.0"
description = """
Fast Frame Synchronization algorithms.
"""

[badges]
maintenance = { status = "actively-developed" }

[dev-dependencies]
bitvec = { version = "0.21", default-features = false }