[package]
name = "benchmark"
version = "0.1.0"
authors = ["Rasmus Melchior Jacobsen <rmja@laesoe.org>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "benchmark"
test = false
doc = false

[features]
default = []
std = [
    "drone-core/std",
    "drone-cortexm/std",
    "drone-stm32-map/std",
]

[dependencies]
drone-core = { version = "0.14.0", path = "../../drone-core" }
drone-cortexm = { version = "0.14.0", path = "../../drone-cortexm" }
drone-stm32-map = { version = "0.14.0", path = "../../drone-stm32-map" }
drone-stm32f4-hal = { version = "0.1.0", path = "../../drone-stm32f4-hal" }
drone-framesync = { version = "0.1.0", path = "../" }

[profile.release]
lto = true
debug = true
panic = "abort"
